// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimedToastNotification persisted and paused renders properly 1`] = `
<div
  className="toast-notifications-list-pf"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="alert toast-pf alert-success alert-dismissable"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-hidden="true"
      className="close close-default"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
        className="pficon pficon-close"
      />
    </button>
    <span
      aria-hidden="true"
      className="pficon pficon-ok"
    />
    <span>
      Success Will Robinson!
    </span>
  </div>
</div>
`;

exports[`ToastNotification renders properly 1`] = `
<div
  className="toast-notifications-list-pf"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="alert toast-pf alert-danger alert-dismissable"
    onMouseEnter={[MockFunction]}
    onMouseLeave={[MockFunction]}
  >
    <button
      aria-hidden="true"
      className="close close-default"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
        className="pficon pficon-close"
      />
    </button>
    <span
      aria-hidden="true"
      className="pficon pficon-error-circle-o"
    />
    <span>
      Success Will Robinson!
    </span>
  </div>
</div>
`;
